--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <ul>
       <li><a href="./triangle.html" target="iframe">Triangle</a></li>
+      <li><a href="./triangle_msaa.html" target="iframe">Triangle / MSAA</a></li>
     </ul>
   </body>
 </html>
