Add Triangle Rotate example

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <ul>
       <li><a href="./triangle.html" target="iframe">Triangle</a></li>
       <li><a href="./triangle_msaa.html" target="iframe">Triangle / MSAA</a></li>
+      <li><a href="./triangle_rotate.html" target="iframe">Triangle / Rotate</a></li>
     </ul>
   </body>
 </html>
