Correct Triangle rotate example title

--- a/triangle_rotate.html
+++ b/triangle_rotate.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>WebGPU triangle MSAA example</title>
+    <title>WebGPU triangle rotate example</title>
     <style>
       body {
         margin: 0;
