--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="./triangle.html" target="iframe">Triangle</a></li>
       <li><a href="./triangle_msaa.html" target="iframe">Triangle / MSAA</a></li>
       <li><a href="./triangle_rotate.html" target="iframe">Triangle / Rotate</a></li>
+      <li><a href="./triangle_vertex.html" target="iframe">Triangle / Vertex</a></li>
     </ul>
   </body>
 </html>
