Fix title in triangle_vertex.html

--- a/triangle_vertex.html
+++ b/triangle_vertex.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>WebGPU triangle attribute example</title>
+    <title>WebGPU triangle vertex example</title>
     <style>
       body {
         margin: 0;
