--- a/triangle_rotate.html
+++ b/triangle_rotate.html
@@ -13,14 +13,12 @@
   <body>
     <script type="module">
       import glslangModule from './js/glslang.js';
-      import glMatrixModule from './js/glmatrix.js';
+      import { mat4 } from './js/glmatrix.js';
 
       // @TODO: Detect WebGPU capability
 
       const run = async () => {
         const glslang = await glslangModule();
-        const glMatrix = await glMatrixModule();
-        const mat4 = glMatrix.mat4;
 
         const vertexShaderCode = `#version 450
           layout(set=0, binding=0) uniform Uniforms {
