Add Triangle Texture example

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="./triangle_msaa.html" target="iframe">Triangle / MSAA</a></li>
       <li><a href="./triangle_rotate.html" target="iframe">Triangle / Rotate</a></li>
       <li><a href="./triangle_vertex.html" target="iframe">Triangle / Vertex</a></li>
+      <li><a href="./triangle_texture.html" target="iframe">Triangle / Texture</a></li>
     </ul>
   </body>
 </html>
