Add Cube rotate example

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="./triangle_rotate.html" target="iframe">Triangle / Rotate</a></li>
       <li><a href="./triangle_vertex.html" target="iframe">Triangle / Vertex</a></li>
       <li><a href="./triangle_texture.html" target="iframe">Triangle / Texture</a></li>
+      <li><a href="./cube_rotate.html" target="iframe">Cube / Rotate</a></li>
     </ul>
   </body>
 </html>
