--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="./triangle_vertex.html" target="iframe">Triangle / Vertex</a></li>
       <li><a href="./triangle_texture.html" target="iframe">Triangle / Texture</a></li>
       <li><a href="./cube_rotate.html" target="iframe">Cube / Rotate</a></li>
+      <li><a href="./cube_alpha_blend.html" target="iframe">Cube / Alpha blend</a></li>
     </ul>
   </body>
 </html>
