--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <iframe name="iframe" src="./triangle.html"></iframe>
+    <iframe name="iframe" src="./triangle.html" scrolling="no"></iframe>
 
     <p>
       <a href="https://github.com/takahirox/webgpu-trial" target="_blank">WebGPU trial</a>
@@ -31,6 +31,8 @@
       <li><a href="./triangle_texture.html" target="iframe">Triangle / Texture</a></li>
       <li><a href="./cube_rotate.html" target="iframe">Cube / Rotate</a></li>
       <li><a href="./cube_alpha_blend.html" target="iframe">Cube / Alpha blend</a></li>
+      <li><a href="./three_box.html" target="iframe">Three.js / Box</a></li>
+      <li><a href="./three_suzanne.html" target="iframe">Three.js / Suzanne</a></li>
     </ul>
   </body>
 </html>
