Add Three.js WebGPURenderer materials example

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="./cube_alpha_blend.html" target="iframe">Cube / Alpha blend</a></li>
       <li><a href="./three_box.html" target="iframe">Three.js / Box</a></li>
       <li><a href="./three_suzanne.html" target="iframe">Three.js / Suzanne</a></li>
+      <li><a href="./three_materials.html" target="iframe">Three.js / Materials</a></li>
     </ul>
   </body>
 </html>
